@@ -18,36 +18,35 @@ package com.echothree.control.user.accounting.server.command;
 
 import com.echothree.control.user.accounting.common.form.GetGlAccountTypesForm;
 import com.echothree.control.user.accounting.common.result.AccountingResultFactory;
-import com.echothree.control.user.accounting.common.result.GetGlAccountTypesResult;
 import com.echothree.model.control.accounting.server.control.AccountingControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
+import com.echothree.model.data.accounting.server.entity.GlAccountType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
-import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.common.validation.FieldDefinition;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 
 public class GetGlAccountTypesCommand
-        extends BaseSimpleCommand<GetGlAccountTypesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<GlAccountType, GetGlAccountTypesForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GlAccountType.name(), SecurityRoles.List.name())
-                )))
-        )));
+                ))
+        ));
 
         FORM_FIELD_DEFINITIONS = List.of();
     }
@@ -56,15 +55,38 @@ public class GetGlAccountTypesCommand
     public GetGlAccountTypesCommand(UserVisitPK userVisitPK, GetGlAccountTypesForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
+
     @Override
-    protected BaseResult execute() {
+    protected void handleForm() {
+        // No form fields.
+    }
+
+    @Override
+    protected Long getTotalEntities() {
         var accountingControl = Session.getModelController(AccountingControl.class);
+
+        return accountingControl.countGlAccountTypes();
+    }
+
+    @Override
+    protected Collection<GlAccountType> getEntities() {
+        var accountingControl = Session.getModelController(AccountingControl.class);
+
+        return accountingControl.getGlAccountTypes();
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<GlAccountType> entities) {
         var result = AccountingResultFactory.getGetGlAccountTypesResult();
-        
-        result.setGlAccountTypes(accountingControl.getGlAccountTypeTransfers(getUserVisit()));
-        
+
+        if(entities != null) {
+            var accountingControl = Session.getModelController(AccountingControl.class);
+
+            result.setGlAccountTypes(accountingControl.getGlAccountTypeTransfers(getUserVisit(), entities));
+        }
+
         return result;
     }
-    
+
 }
